# importclean

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
docs/: api.md
examples/: basic_usage.py  custom_plugin.py
importclean/: __init__.py  api.py  cli.py  config.py  engine.py  models.py
importclean/analyzers/: __init__.py  circular_detector.py  heavy_detector.py  import_collector.py  usage_analyzer.py
importclean/plugins/: __init__.py  base.py  registry.py
importclean/reporters/: __init__.py  console.py  diff.py  graph.py  json_reporter.py
importclean/transformers/: __init__.py  import_remover.py  import_sorter.py
importclean/utils/: __init__.py  duplicate_finder.py  file_scanner.py  validator.py
tests/: conftest.py
tests/fixtures/sample_project/: main.py  utils.py
tests/integration/: test_cli.py  test_engine.py
tests/unit/: test_circular_detector.py  test_config.py  test_coverage_gaps.py  test_duplicate_finder.py  test_engine.py  test_file_scanner.py  test_final_coverage.py  test_graph_reporter.py  test_heavy_detector.py  test_import_collector.py  test_import_remover.py  test_import_remover_legacy.py  test_import_sorter.py  test_json_reporter.py  test_models.py  test_plugins.py  test_remover_internals.py  test_reporters.py  test_usage_analyzer.py  test_validator.py
