[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "importclean"
version = "0.1.0"
description = "A production-ready Python import cleaner that detects and removes unused imports while preserving code behavior."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "importclean contributors" }]
keywords = ["imports", "linting", "static-analysis", "refactoring", "ast", "libcst"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "libcst>=1.1.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "click>=8.1.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-xdist>=3.3.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.5.0",
    "build>=1.0.0",
    "twine>=4.0.0",
]

[project.scripts]
importclean = "importclean.cli:main"

[project.urls]
Homepage = "https://github.com/Madhav703/importclean"
Repository = "https://github.com/Madhav703/importclean"
"Bug Tracker" = "https://github.com/Madhav703/importclean/issues"
Changelog = "https://github.com/Madhav703/importclean/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["importclean*"]

[tool.setuptools.package-data]
importclean = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["--tb=short", "-q"]
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["importclean"]
branch = true
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 95
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "@abstractmethod",
]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
